# random_stuff

./: .gitignore  Cargo.toml
dezacord/: Cargo.toml
dezacord/src/: main.rs
dirs/: Cargo.toml
dirs/src/: main.rs
even_odd/: Cargo.toml
even_odd/src/: main.rs
even_odd/working/: main.cpp
gcc_crash_search/: Cargo.toml
gcc_crash_search/src/: main.rs
tcpspeed/: Cargo.toml
tcpspeed/src/: main.rs
thread_test/: Cargo.toml
thread_test/src/: main.rs
unaligned_test/: Cargo.toml
unaligned_test/src/: main.rs
winapi_mem_reset/: main.cpp
window_stats/: Cargo.toml
window_stats/src/: main.rs
