[workspace]
members = ["dezacord"]
resolver = "2"

[workspace.dependencies]
zip = "2"
fs-err = "2"
indexmap = { version = "2", features = ["serde"] }
bumpalo = { version = "3", features = ["collections", "std"] }
serde = "1"
serde_derive = "1"
serde_json = "1"

[profile.dev.package."*"]
opt-level = 3
